@@ -37,7 +37,7 @@ import zip.ootd.ootdzip.comment.repository.CommentRepository;
 import zip.ootd.ootdzip.comment.service.CommentService;
 import zip.ootd.ootdzip.notification.domain.Notification;
 import zip.ootd.ootdzip.notification.repository.NotificationRepository;
-import zip.ootd.ootdzip.oauth.domain.UserAuthenticationToken;
+import zip.ootd.ootdzip.oauth.OAuthUtils;
 import zip.ootd.ootdzip.ootd.domain.Ootd;
 import zip.ootd.ootdzip.ootd.repository.OotdRepository;
 import zip.ootd.ootdzip.ootd.service.OotdService;
@@ -319,7 +319,7 @@ public class NotificationAsyncServiceTest {
         Ootd ootd = Ootd.createOotd(user,
                 content,
                 isPrivate,
-                Arrays.asList(ootdImage),
+                List.of(ootdImage),
                 Arrays.asList(ootdStyle, ootdStyle1));
 
         return ootdRepository.save(ootd);
@@ -356,10 +356,10 @@ public class NotificationAsyncServiceTest {
     }
 
     private void makeAuthenticatedUserBy(User user) {
-        UserAuthenticationToken.UserDetails principal = new UserAuthenticationToken.UserDetails(user.getId());
         SecurityContext securityContext = SecurityContextHolder.createEmptyContext();
-        Authentication authentication = new UserAuthenticationToken(principal);
+        Authentication authentication = OAuthUtils.createJwtAuthentication(user);
         securityContext.setAuthentication(authentication);
+
         SecurityContextHolder.setContext(securityContext);
     }
 
